--- a/tutorials/Python/NEON-general/NEON-download-explore/NEON-download-explore.ipynb
+++ b/tutorials/Python/NEON-general/NEON-download-explore/NEON-download-explore.ipynb
@@ -29,8 +29,8 @@
     "- \n",
     "\r\n",
     "Download NEON data using the nuonUtilities packag- e.\r\n",
-    "Understand downloaNEON ded data sets and load them i or Python for analys\n",
-    "### es.\r\n",
+    "Understand downloaNEON ded data sets and load them in or Python for analysis.\n",
+    "\r\n",
     "Things You’ll Need To Complete This Tutorial\r\n",
     "You can fthee R or Python code throughout this tutoio. * For Python users, we recommend using Python\n",
     "\n",
