--- a/tutorials/Python/NEON-general/NEON-download-explore/NEON-download-explore.ipynb
+++ b/tutorials/Python/NEON-general/NEON-download-explore/NEON-download-explore.ipynb
@@ -28,16 +28,16 @@
     "After completing this activity, you will be able to:\r",
     "- \n",
     "\r\n",
-    "Download NEON data using the nuonUtilities packag- e.\r\n",
-    "Understand downloaNEON ded data sets and load them in or Python for analysis.\n",
+    "Download NEON data using the neonUtilities package.\r\n",
+    "Understand how to download NEON data sets and load them in or Python for analysis.\n",
     "\r\n",
     "Things You’ll Need To Complete This Tutorial\r\n",
-    "You can fthee R or Python code throughout this tutoio. * For Python users, we recommend using Python\n",
+    "You can fthee R or Python code throughout this tutorial. * For Python users, we recommend using Python 3.9 or above.\n",
     "\n",
     "### Required Packages\n",
     "- `neonutilities`: Basic functions for accessing NEON data\r",
     "- `\n",
-    "rasteri`o: Spatial data package; needed for working with remote sensing data. 3.9+. type."
+    "rasterio`: Spatial data package; needed for working with remote sensing data types."
    ]
   },
   {
