--- a/tutorials/Python/AOP/Hyperspectral/canopy_nitrogen/intro_canopy_nitrogen.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/canopy_nitrogen/intro_canopy_nitrogen.ipynb
@@ -38,13 +38,12 @@
     "After completing this tutorial, you will be able to:\n",
     "\n",
     "- Download the Canopy Nitrogen Data Product\n",
-    "- Understand the 4 files that comprise the Canopy Nitrgoen data product\n",
-    "- Mask the nitrogen data to include only valid pixels\n",
+    "- Understand the 4 files that comprise the Canopy Nitrogen data product\n",
+    "- Mask the Nitrogen data to include only valid pixels\n",
     "\n",
     "## Install Python Packages\n",
     "- neonutilities\n",
     "- rasterio\n",
-    "- os\n",
     "\n",
     "</div>"
    ]
@@ -77,7 +76,7 @@
    "id": "f0d60fc3-685e-4fc7-9226-c64aa2bd42c9",
    "metadata": {},
    "source": [
-    "First let's see what data are available. As of Feb 2025, only a subset of sites have been published, as NEON is seeking input from the user community before producing this model for all NEON terrrestrial sites."
+    "First let's see what data are available. As of Feb 2026, only a subset of sites have been published, as NEON is seeking input from the user community before producing this model for all NEON terrrestrial sites."
    ]
   },
   {
